@startuml

package Hexagon-Kernel:Covid {

    interface PersistencePort <<port.out.covid>> {
      +persistDailyCovidRecord()
      +persistWeeklyCovidRecord()
      +persistFinancialPolicyRespRecord()
    }

    interface StagingPort <<port.in.covid>> {
     +addDailyCovidCases()
     +addWeeklyCovidCases()
     +addFinancialSectorPolicyResponse()
    }

    class CovidUseCaseRepository <<kernel.covid>> {
     +addDailyCovidCases()
     +addWeeklyCovidCases()
     +addFinancialSectorPolicyResponse()
    }

    StagingPort <- CovidUseCaseRepository : implements
    CovidUseCaseRepository -> PersistencePort : uses

}

class CovidFileRouter
class CovidElasticSearchRouter


StagingPort <-- CovidFileRouter : adaptsTo
PersistencePort <-- CovidElasticSearchRouter : implements

package Hexagon-Domain:Covid {

    class CovidCase << domain.covid >>
    class CovidCaseWeekly << domain.covid >>
    class FinancialSectorPolicyReply << domain.covid >>

    CovidUseCaseRepository --> CovidCase
    CovidUseCaseRepository --> CovidCaseWeekly
    CovidUseCaseRepository --> FinancialSectorPolicyReply
}

@enduml